Fix overflow of displayBox

--- a/client/src/components/MarkdownEditor/EditBox.styl
+++ b/client/src/components/MarkdownEditor/EditBox.styl
@@ -4,7 +4,7 @@
     position: absolute
     bottom: 4px
     right: 6px
-    color: $gray
+    color: $grayDark
     font-size: 12px
   & > .edit-box-input
     width: 100%
